k8s/authentik/06-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: authentik
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
