k8s/authentik/08-authentik-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server-service
  namespace: authentik
spec:
  selector:
    app: authentik-server
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
