k8s/authentik/11-outpost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost-service
  namespace: authentik
spec:
  selector:
    app: authentik-outpost
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
